# matrix-calculator

./: .gitignore  .pypirc  LICENSE  main.py  pyproject.toml
src/mxcalc/: calculate.py  interface.py  main.py
