[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtrx-calc"  # The name used for 'pip install'
version = "0.1.0"
description = "A matix calculator which performs matrix operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[project.scripts]
mtrx_calc = "mtrx_calc.main:main" # Optional: Creates a CLI command
